--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
+    <div class="header">
         <a class="loc" href="https://www.google.com.ua/maps/place/%D0%A0%D1%96%D0%B2%D0%BD%D0%B5,+%D0%A0%D1%96%D0%B2%D0%BD%D0%B5%D0%BD%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@50.6110633,26.209564,13z/data=!3m1!4b1!4m5!3m4!1s0x472f6caa2d7c89d7:0x27481abdbc4e484!8m2!3d50.6199!4d26.251617?hl=uk&authuser=0">Rivne</a>
         <h1>MegaHotel</h1>
         <h3>phone</h3>
     </div>
-    <H1>TEXT</H1>
+    <!-- <H1>TEXT</H1> -->
     <div class="home-images">
         <img src="images/Без названия.jpg" alt="тварина">
         <img src="images/Без названия.jpg" alt="тварина" height="200">
