--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="title">MegaHotel</p>
             </th>
             <th>
-                <p>+380971234567</p>
+                <p class="phone">+380971234567</p>
             </th>
         </tr>
     </table>
