--- a/about.html
+++ b/about.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>1</title>
+    <title>Про нас</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>1</h1>
-    <div class="home-images">
-            <img src="images/Без названия.jpg" alt="1">
+    <h1>Про нас</h1>
+    <div id="footer">
+        <div class="side">
+            <a id="contacts" href="contact.html">Contacts</a>
+            <a id="home" href="index.html">Home</a>
         </div>
-    <a class="mybtn" href="/index.html">Головна</a>
+    </div>
 </body>
 </html>
