--- a/prices.html
+++ b/prices.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Контакти</title>
+    <title>Ціни</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Контакти</h1>
-    <div class="contacts">
-        <p class="phone">+380971234567</p>
-        <p class="mail">megaHotel@gmail.com</p>
-    </div>
+    <h1>Ціни</h1>
     <div id="footer">
         <div class="side">
             <a id="contacts" href="contact.html">Contacts</a>
