--- a/index.html
+++ b/index.html
@@ -5,48 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MegaHotel</title>
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <style>
+        
+    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header" style="background-color: cornflowerblue; height: 50px;">
-        <div class="side" style="text-align: center">
-            <a class="loc" style="vertical-align: bottom; float: left; width: 25%; text-decoration: none" href="https://www.google.com.ua/maps/place/%D0%A0%D1%96%D0%B2%D0%BD%D0%B5,+%D0%A0%D1%96%D0%B2%D0%BD%D0%B5%D0%BD%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@50.6110633,26.209564,13z/data=!3m1!4b1!4m5!3m4!1s0x472f6caa2d7c89d7:0x27481abdbc4e484!8m2!3d50.6199!4d26.251617?hl=uk&authuser=0">Rivne</a>
-            <a class="phone" style="float: right; width: 25%">+380971234567</a>
-            <h1 style="text-align: center; font-size: 40px">MegaHotel</h1>
+    <div id="header">
+        <div class="side">
+            <a class="loc" href="https://www.google.com.ua/maps/place/%D0%A0%D1%96%D0%B2%D0%BD%D0%B5,+%D0%A0%D1%96%D0%B2%D0%BD%D0%B5%D0%BD%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@50.6110633,26.209564,13z/data=!3m1!4b1!4m5!3m4!1s0x472f6caa2d7c89d7:0x27481abdbc4e484!8m2!3d50.6199!4d26.251617?hl=uk&authuser=0">Rivne</a>
+            <a class="phone">+380971234567</a>
+            <h1>MegaHotel</h1>
         </div>
     </div>
 
-    <!-- <p style="color:red">TEXT</p> -->
-    <div class="home-images" style="font-weight: bold; font-size: 30px; width: 100%">
-        <div style="float: left"><a href="#"></a><</div>
-        <div style="float: right"><a href="#"></a>></div>
-        <img src="images/home01.jpg" style="width: 97%" alt="hotel01">
-        <!-- <img src="images/Без названия.jpg" alt="тварина"> -->
-        <!-- <img src="images/Без названия.jpg" alt="тварина" height="200"> -->
-    </div>
-    <!-- <a class="mybtn" href="/one.html">Ще одна сторінка</a> -->
-    <div class="footer" style="position: fixed; left: 0; bottom: 0; background-color: darkgreen; width: 100%">
-        <div style="float: left">
-            <a id="contacts" style="text-decoration: none" href="contact.html">Contacts</a>
-        </div>
-        <div style="float: right">
-            <a id="home" style="text-decoration: none" href="index.html">Home</a>
+    <div id="menu">
+        <div class="btn">
+            <a class="btnMenu" href="about.html">Про нас</a>
+            <a class="btnMenu" href="rooms.html">Номери</a>
+            <a class="btnMenu" href="prices.html">Ціни</a>
+            <a class="btnMenu" href="orders.html">Замовлення</a>
+            <a class="btnMenu" href="contacts.html">Contacts</a>
         </div>
     </div>
-    <!-- <table class="footer">
-        <tr>
-            <th>
-                <a class="contacts" href="/contacts.html">Contacts</a>
-                <p id="contacts" >Contacts</p>
-                <div class="contacts">
-                    <p class="phone">+380971234567</p>
-                    <p class="mail">megaHotel@gmail.com</p>
-                </div>
-            </th>
-            <th>
-                <a class="home" href="index.html">Home</a>
-            </th>
-        </tr>
-    </table> -->
+
+    <img src="images/home01.jpg" style="width: 100%" alt="hotel01">
+
+    <div id="footer">
+        <div class="side">
+            <a id="contacts" href="contact.html">Contacts</a>
+            <a id="home" href="index.html">Home</a>
+        </div>
+    </div>
 </body>
 </html>
